Opened 17 years ago

Closed 17 years ago

#1652 closed bug (fixed)

B_AVOID_FOCUS doesn't behave like in R5

Reported by: xed Owned by: axeld
Priority: normal Milestone: R1
Component: Servers/app_server Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

(Maybe this has already be discussed and pointed out..)

The B_AVOID_FOCUS flag for BWindow works different in Haiku. According to the BeBook this flag should 'only' "Prevents the window from being the target of keyboard events." while in Haiku it also prevents mouse events (clicks).

Change History (4)

comment:1 by axeld, 17 years ago

Component: Kits/Interface KitServers/app_server

comment:2 by axeld, 17 years ago

Bug #1678 is a duplicate of this one.

comment:3 by axeld, 17 years ago

Status: newassigned

comment:4 by axeld, 17 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev23705. I even wrote a test application (AvoidFocus) for that ages ago, but then obviously forgot about it :-)

Note: See TracTickets for help on using tickets.