* B_AVOID_FOCUS windows never got mouse clicks. This fixes bug #1652. * Our behaviour differs a bit from how BeOS handles those windows, added a   comment to the code which explains that, and how we could change it if we   really wanted to.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23705 a95241bf-73f2-0310-859d-f6bbb57e9c96